src/app/mapped-vans/mapped-vans.component.css
.title {
    margin: 0px 0px 10px;
    padding: 15px 24px 15px;
    color: white;
    font-size: 18px;
    line-height: 32px;
    font-weight: 400;
    background: #0277bd;
}

.title h4 {
    display: inline-block;
}

.title .exit {
    cursor: pointer;
}

